# libknx

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  Test.md
.github/workflows/: cmake-single-platform.yml
cmake/: knxConfig.cmake
knx_usage/: CMakeLists.txt  main.cpp
src/: main.cpp
src/bytes/: ByteBuffer.cpp  ByteBuffer.h  ByteBufferReader.cpp  ByteBufferReader.h  ByteBufferWriter.cpp  ByteBufferWriter.h  ByteDef.h
src/cemi/: ACPI.cpp  ACPI.h  Cemi.cpp  Cemi.h  Control.cpp  Control.h  DataACPI.h  NPDUFrame.cpp  NPDUFrame.h  TCPI.cpp  TCPI.h
src/connection/: ConnectionListener.h  Discovery.cpp  Discovery.h  IpKnxConnection.cpp  IpKnxConnection.h  KnxClientConnection.cpp  KnxClientConnection.h  KnxConnection.cpp  KnxConnection.h  KnxConnectionFactory.cpp  KnxConnectionFactory.h  KnxConnectionListener.h  TunnelingConnection.cpp  TunnelingConnection.h
src/datapointtypes/: DataPointType.h
src/headers/: ConnectionHeader.cpp  ConnectionHeader.h  ConnectionRequestData.cpp  ConnectionRequestData.h  ConnectionRequestInformation.cpp  ConnectionRequestInformation.h  DeviceDib.cpp  DeviceDib.h  HPAI.cpp  HPAI.h  IpAddress.cpp  IpAddress.h  KnxAddress.cpp  KnxAddress.h  KnxIpHeader.cpp  KnxIpHeader.h  KnxStructure.cpp  KnxStructure.h
src/ip/: AsioHttpServer.cpp  AsioHttpServer.h  UdpSocket.cpp  UdpSocket.h
src/knx/bytes/: ByteBufferReader.cpp  ByteBufferReader.h  ByteBufferWriter.cpp  ByteBufferWriter.h  ByteDef.h
src/knx/cemi/: ACPI.cpp  ACPI.h  AdditionalInformation.cpp  AdditionalInformation.h  Cemi.cpp  Cemi.h  Control.cpp  Control.h  NPDUFrame.cpp  NPDUFrame.h  TCPI.cpp  TCPI.h
src/knx/connection/: AsyncMessageState.cpp  AsyncMessageState.h  ConnectionListener.h  Discovery.cpp  Discovery.h  KnxClientConnection.cpp  KnxClientConnection.h  KnxConnectionFactory.cpp  KnxConnectionFactory.h  KnxConnectionListener.h  SendTunnelingState.cpp  SendTunnelingState.h  SendTunnelingState.hpp  TunnelingConnection.cpp  TunnelingConnection.h
src/knx/datapointtypes/: DataPointType.h  Format.h
src/knx/headers/: ConnectionHeader.cpp  ConnectionHeader.h  ConnectionRequestData.cpp  ConnectionRequestData.h  ConnectionRequestInformation.cpp  ConnectionRequestInformation.h  DeviceDib.cpp  DeviceDib.h  HPAI.cpp  HPAI.h  IpAddress.cpp  IpAddress.h  KnxAddress.cpp  KnxAddress.h  KnxIpHeader.cpp  KnxIpHeader.h  KnxStructure.cpp  KnxStructure.h  ManufacturerDib.cpp  ManufacturerDib.h  SupportedServiceFamiliesDib.cpp  SupportedServiceFamiliesDib.h
src/knx/ip/: UdpSocket.cpp  UdpSocket.h
src/knx/ipreqresp/: AbstractRequestResponse.h  KnxIpHeader.h  RequestResponseFactory.cpp  RequestResponseFactory.h
src/knx/requests/: AbstractRequest.h  ConnectRequest.cpp  ConnectRequest.h  ConnectStateRequest.cpp  ConnectStateRequest.h  DescriptionRequest.cpp  (+7 more)
src/requestresponses/: SearchResponse.cpp  SearchResponse.h
src/requests/: AbstractRequest.h  ConnectRequest.cpp  ConnectRequest.h  ConnectStateRequest.cpp  ConnectStateRequest.h  ConnectionRequest.cpp  ConnectionRequest.h  DisconnectRequest.cpp  DisconnectRequest.h  SearchRequest.cpp  SearchRequest.h  TunnelingRequest.cpp  TunnelingRequest.h  TunnellingRequest.cpp  TunnellingRequest.h
src/responses/: ConnectResponse.cpp  ConnectResponse.h  ConnectStateResponse.cpp  ConnectStateResponse.h  DisconnectResponse.cpp  DisconnectResponse.h  ResponseFactory.cpp  ResponseFactory.h  ResponseVisitor.h  SearchResponse.cpp  SearchResponse.h  TunnelAckResponse.cpp  TunnelAckResponse.h
test/bytes/: ByteBufferReaderTests.cpp  ByteBufferTests.cpp  ByteBufferWriterTests.cpp
test/cemi/: CemiTest.cpp
test/connection/: AsyncMessageTests.cpp
test/datapoints/: FormatTests.cpp
test/headers/: ConnectionHeaderTests.cpp  DeviceDibTest.cpp  GroupAddressTest.cpp  HPAITests.cpp
test/mock/: BufferStream.h
test/requests/: DisconnectRequestTests.cpp  TunnelingRequestTests.cpp
test/responses/: ConnectStateResponseTest.cpp  SearchResponseTests.cpp
(+41 files in other folders)
